# letswalk

./: .gitignore  Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
letswalk/: asgi.py  settings.py  urls.py  wsgi.py
walkingteams/: admin.py  apps.py  forms.py  models.py  views.py
walkingteams/migrations/: 0001_initial.py
walkingteams/templates/: base.html
