[tool.poetry]
name = "lets-walk"
version = "0.1.0"
description = "Track your team's progress as they walk to a destination."
authors = ["Kano Marvel <knmarvel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
flake8 = "^3.8.2"
postgres = "^3.0.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
